--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "celebrate": "^13.0.4",
     "cookie-parser": "^1.4.5",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
